--- a/.github/workflows/add-submodule.yml
+++ b/.github/workflows/add-submodule.yml
@@ -18,7 +18,9 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
       - name: Add submodule
+        env:
+          REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
         run: |
-          git submodule add https://github.com/tmpmachine/test-project.git submodule/src
+          git submodule add https://$REPO_ACCESS_TOKEN@github.com/tmpmachine/test-project.git submodule/src
           git commit -am "Add submodule"
           git push
