--- a/.github/workflows/add-submodule.yml
+++ b/.github/workflows/add-submodule.yml
@@ -1,8 +1,8 @@
 name: Add Submodule
 
 on:
-  repository_dispatch:
-    types: [deploy-from-submodule]
+  # repository_dispatch:
+    # types: [deploy-from-submodule]
   workflow_dispatch:
 
 jobs:
