--- a/.github/workflows/pull-submodule.yml
+++ b/.github/workflows/pull-submodule.yml
@@ -25,3 +25,15 @@ jobs:
           fi
           echo "Initializing and updating submodules..."
           git submodule update --init --recursive
+
+      - name: Commit and Push Changes
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          if [ -n "$(git status --porcelain)" ]; then
+            git add .
+            git commit -m "changes"
+            git push
+          else
+            echo "No changes to commit."
